# amrxref

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE-CODE  LICENSE-DATA  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new_mapping.yml
.github/workflows/: build.yml
data/: sources.yaml
data/genes/: ARO_3000005.yaml  ARO_3000010.yaml  ARO_3000013.yaml  ARO_3000024.yaml  ARO_3000025.yaml  ARO_3000026.yaml  ARO_3000027.yaml  ARO_3000074.yaml  ARO_3000090.yaml  ARO_3000118.yaml  ARO_3000124.yaml  ARO_3000149.yaml  ARO_3000165.yaml  ARO_3000166.yaml  ARO_3000167.yaml  ARO_3000168.yaml  ARO_3000172.yaml  ARO_3000173.yaml  ARO_3000174.yaml  ARO_3000175.yaml  ARO_3000177.yaml  ARO_3000178.yaml  ARO_3000179.yaml  ARO_3000180.yaml  ARO_3000181.yaml  ARO_3000182.yaml  ARO_3000183.yaml  ARO_3000186.yaml  ARO_3000190.yaml  ARO_3000191.yaml  ARO_3000192.yaml  ARO_3000193.yaml  ARO_3000194.yaml  ARO_3000195.yaml  ARO_3000196.yaml  ARO_3000197.yaml  ARO_3000198.yaml  ARO_3000205.yaml  ARO_3000206.yaml  ARO_3000215.yaml  (+4739 more)
data/schema/: gene.schema.json
derived/: crosswalk.json  crosswalk.jsonld  crosswalk.ttl
docs/: _config.yml  coverage.html  crosswalk.tsv  index.html  methods.html  stats.json
scripts/: build_derived.py  cluster_and_emit.py  fetch_sources.sh  generate_stats.py  ingest_card.py  ingest_others.py
src/amrxref/: __init__.py  cli.py
